--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -65,6 +65,7 @@
     <Compile Include="Assets\Scripts\PlayerMovement.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Assets\Imported Material\Fantasy Forest Environment Free Sample\StandardNoCulling.shader" />
     <None Include="Assets\Imported Material\8K Skybox Pack Free\ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
