Added Different menus
Added different menus and added levelmanagers worked on mostly design and some scripting

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,8 +53,11 @@
     <UnityVersion>2022.2.14f1</UnityVersion>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Assets\Hour 14 Package\LevelManager.cs" />
     <Compile Include="Assets\Scripts\GunBase.cs" />
     <Compile Include="Assets\Scripts\Sway.cs" />
+    <Compile Include="Assets\Hour 14 Package\LevelManagerMain.cs" />
+    <Compile Include="Assets\Hour 14 Package\QuitGame.cs" />
     <Compile Include="Assets\Scripts\MouseLook.cs" />
     <Compile Include="Assets\Scripts\Weapon.cs" />
     <Compile Include="Assets\Scripts\Base_Door.cs" />
